--- a/src/shared/components/UIElements/Modal/Modal.css
+++ b/src/shared/components/UIElements/Modal/Modal.css
@@ -6,13 +6,13 @@
   width: 80%;
   background: white;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
-  border-radius: 8px;
+  border-radius: 0px;
 }
 
 .modal__header {
   width: 100%;
   padding: 1rem 0.5rem;
-  background: #2a006e;
+  background: #005472;
   color: white;
 }
 
